# lab4_csa

./: .gitignore  .gitlab-ci.yml  APPLY_CHANGES_WINDOWS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
examples/: bigconst.asm  bigconst.lst  cat.asm  cat.lst  cat_input.json  double_precision.asm  double_precision.lst  hello.asm  hello.lst  hello_user_name.asm  hello_user_name.lst  hello_user_name_input.json  prob6_input.json  prob6_scalar.asm  prob6_scalar.lst  prob6_vector.asm  prob6_vector.lst  sort.asm  sort.lst  sort_input.json  trap_overrun.asm  trap_overrun_input.json  vector_ops.asm
src/: isa.py  machine.py  translator.py
tests/: test_golden.py
tests/golden/: bigconst.lst  bigconst.meta.json  cat.lst  cat.meta.json  cat.out  double_precision.lst  double_precision.meta.json  hello.lst  hello.meta.json  hello_user_name.lst  hello_user_name.meta.json  prob6_scalar.lst  prob6_scalar.meta.json  prob6_vector.lst  prob6_vector.meta.json  prob6_vector.out  sort.lst  sort.meta.json  trap_overrun.lst  trap_overrun.meta.json  vector_ops.lst  vector_ops.meta.json
