[project]
name = "lab4"
version = "0.1.0"
description = "Лабораторная работа №4: RISC + vector + trap + pstr + neum (Эйлер №6)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["tests/golden"]

[tool.ruff.lint]
# "суровые" настройки, как просит методичка.
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "B",        # bugbear
    "I",        # isort
    "UP",       # pyupgrade
    "SIM",      # simplify
    "RUF",      # ruff-specific
]
ignore = [
    # Длинные сообщения исключений — пусть будут многословны.
    "E501",
    # Магические числа во многих местах ISA — это норма.
    "PLR2004",
    # У нас есть один-два глобальных мутируемых лога — ОК для учебной модели.
    "B008",
    # Кириллица в комментариях/docstring-ах — норма, мы пишем на русском.
    "RUF001", "RUF002", "RUF003",
    # Pytest без поднятия исключений в Exception-классе — для учебной задачи ОК.
    "B904",
    # Учебная модель, иногда мы намеренно длиннее.
    "SIM108", "SIM102", "SIM103",
]

[tool.ruff.lint.per-file-ignores]
# В тестах магические числа и assert вообще нормальны.
"tests/*" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true

# Тесты можем не так строго типизировать (там pytest fixtures и т.п.)
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
